k8s/twitter-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - name: twitter
          image: bird-twitter:1.3
          imagePullPolicy: Never
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: twitter-service
spec:
  selector:
    app: twitter
  ports:
    - port: 9001
