k8s/ums-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
    spec:
      containers:
        - name: ums
          image: bird-ums:1.3
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ums-service
spec:
  selector:
    app: ums
  ports:
    - port: 9000
